@startuml
skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 50
skinparam ranksep 30
hide stereotype
skinparam class {
    BackgroundColor White
    BackgroundColor<<User>> LightBlue
    BackgroundColor<<Game>> LightGreen
    BackgroundColor<<Match>> LightPink
    BackgroundColor<<MatchResult>> LightPink
    BackgroundColor<<Options>> LightYellow
}


abstract class User <<User>> {
    String username, password, email
}

class ContentCreator <<User>> extends User {
}

class Player <<User>> extends User {
}

abstract class Game <<Game>> {
    String instructions
}

class ImageName <<Game>> extends Game {
}

class ImageImage <<Game>> extends Game {
}

class Options <<Game>> extends Game {
}

class ImageImageQuestion <<Options>>{
    String image, solution
}

class ImageNameQuestion <<Options>>{
    String image, solution
}

class ImageOptionsQuestion <<Options>>{
    String image, solution, optionA, optionB, optionC, optionD, optionE
}

class Match <<Match>> {
    int rating
    String name, description
}

class MatchResult <<MatchResult>> {
    int result
    float time
}

ContentCreator "1" -- "*" Match:creates >
ContentCreator "1" -- "*" Game:creates >

Player "*" -- "*" Match:play >
Player "1" -- "*" MatchResult:of <

Match "1" -- "*" MatchResult:of <
Match "1" -- "1..*" Game:contains >

ImageName "1" -- "*" ImageNameQuestion:have >
ImageImage "1" -- "*" ImageImageQuestion:have >
Options "1" -- "*" ImageOptionsQuestion:have >

@enduml